syntax = "proto3";

package CoreCover.Framework;

service ExecutionTracker {
	rpc Track (ExecutedLine) returns (ExecutedLineReply) {}
}

message ExecutedLine {
	string moduleHash = 1;
	int32 metadataToken = 1111;
	int32 lineNumber = 12;
}

message ExecutedLineReply {
}